fix: 一些简单的问题修复